src/build.txt
gcc -std=gnu99 -DRHO_DEBUG -DRHO_TRACE -Wall -Werror -Wextra -Wno-deprecated-declarations -I. -DRHO_PLAT_LINUX    -c -o openssl/rho_ssl.o openssl/rho_ssl.c
openssl/rho_ssl.c: In function ‘rho_ssl_destroy’:
openssl/rho_ssl.c:232:14: error: ‘ssl’ undeclared (first use in this function)
     SSL_free(ssl);
              ^
openssl/rho_ssl.c:232:14: note: each undeclared identifier is reported only once for each function it appears in
openssl/rho_ssl.c:233:15: error: ‘s_ssl’ undeclared (first use in this function)
     rhoL_free(s_ssl);
               ^
openssl/rho_ssl.c:230:33: error: unused parameter ‘r_ssl’ [-Werror=unused-parameter]
 rho_ssl_destroy(struct rho_ssl *r_ssl)
                                 ^
cc1: all warnings being treated as errors
<builtin>: recipe for target 'openssl/rho_ssl.o' failed
make: *** [openssl/rho_ssl.o] Error 1
